added project name as property so that it can be overridden in settings.xml locally

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
     <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Verdis Server</name>
+    <properties>
+        <names.verdis-server>VerDIS Server</names.verdis-server>
+    </properties>
+    <name>${names.verdis-server}</name>
+    
     <description>!!! description pending !!!</description>
     <licenses>
         <license>
