--- a/pom.xml
+++ b/pom.xml
@@ -5,78 +5,145 @@
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>2.4</version>
+        <version>5.0-SNAPSHOT</version>
     </parent>
 
     <groupId>de.cismet.verdis</groupId>
     <artifactId>verdis-server</artifactId>
-    <version>4.2-SNAPSHOT</version>
+    <version>5.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
         <names.verdis-server>VerDIS Server</names.verdis-server>
     </properties>
-    <name>${names.verdis-server}</name>
     
+    <name>${names.verdis-server}</name>
     <description>!!! description pending !!!</description>
-    <licenses>
-        <license>
-            <name>GNU Lesser General Public License</name>
-            <distribution>repo</distribution>
-            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
-        </license>
-    </licenses>
-
-    <prerequisites>
-        <maven>3</maven>
-    </prerequisites>
 
     <scm>
         <connection>https://github.com/cismet/verdis-server.git</connection>
         <developerConnection>scm:git:git@github.com:cismet/verdis-server.git</developerConnection>
         <url>https://github.com/cismet/verdis-server</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
-    <repositories>
-        <repository>
-            <id>cismet-repo</id>
-            <url>https://repo.cismet.de/repo</url>
-            <releases>
-                <enabled>true</enabled>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>daily</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>interval:60</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/switchonproject/verdis-server/issues</url>
+    </issueManagement>
+    
+    <ciManagement>
+        <system>jenkins</system>
+        <url>https://ci.cismet.de/job/verdis-server/</url>
+    </ciManagement>
 
+    <dependencyManagement>  
+        <!-- IMPORT of cismet-ext-bom -->
+        <dependencies>
+            <dependency>
+                <groupId>de.cismet</groupId>
+                <artifactId>cismet-ext-bom</artifactId>
+                <version>5.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        
+            <!-- BEGIN: managed cids-dependencies -->
+            
+            <dependency>
+                <groupId>de.cismet.cids</groupId>
+                <artifactId>cids-server</artifactId>
+                <version>5.0-SNAPSHOT</version>
+                <type>jar</type>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>de.cismet.cids</groupId>
+                <artifactId>cids-server-rest-types</artifactId>
+                <version>5.0-SNAPSHOT</version>
+                <scope>compile</scope>
+                <type>jar</type>
+            </dependency>
+                                    
+            <dependency>
+                <groupId>de.cismet.verdis</groupId>
+                <artifactId>verdis-commons</artifactId>
+                <version>5.0-SNAPSHOT</version>
+                <!--
+                     verdis-server imports only final CONSTANTS from verdis-commons:
+                    -> static final fields will be inlined by the bytecode compiler 
+                    both in the current classes, and in other classes!
+                    -> maven dependecy-plugin does not find any import to verdis-commons
+                    during bytecode analysis!
+                -->
+                <scope>provided</scope>
+                <type>jar</type>
+            </dependency>
+            
+            <dependency>
+                <groupId>de.cismet.cids.custom.wupp.server</groupId>
+                <artifactId>cids-custom-server-wuppertal</artifactId>
+                <version>5.0-SNAPSHOT</version>
+                <scope>runtime</scope>
+            </dependency>
+            <!-- END: managed cids-dependencies -->    
+        </dependencies>
+    </dependencyManagement>
   
     <dependencies>
+        <!-- BEGIN: cids-dependencies -->
         <dependency>
             <groupId>de.cismet.cids</groupId>
             <artifactId>cids-server</artifactId>
-            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.cismet.cids</groupId>
+            <artifactId>cids-server-rest-types</artifactId>
         </dependency>
         <dependency>
             <groupId>de.cismet.verdis</groupId>
             <artifactId>verdis-commons</artifactId>
-            <version>4.0</version>
+            <!--
+                be careful when relying on scope set in <dependencyManagement>:
+                could be overwritten by upstream <dependencyManagement>!
+            -->
+            <scope>provided</scope>
         </dependency>
+        <!-- END: cids-dependencies -->
+        
+        <!-- BEGIN: managed dependencies -->
+        
+        <!-- END: managed dependencies -->
+        
+        <!-- BEGIN: Provided dependencies -->
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!-- END: Provided dependencies -->
+        
+        <!-- BEGIN: Runtime dependencies -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <!-- END: Runtime dependencies -->
+       
+        <!--<dependency>
             <groupId>de.cismet.cids.custom.wupp.server</groupId>
             <artifactId>cids-custom-server-wuppertal</artifactId>
             <version>4.0</version>
             <scope>runtime</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>org.postgis</groupId>
+            <artifactId>postgis-jdbc</artifactId>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
-    
-    <build>
-        <finalName>verdis-server-2.0-SNAPSHOT</finalName>
-    </build>
 </project>
