--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/switchonproject/verdis-server/issues</url>
+        <url>https://github.com/cismet/verdis-server/issues</url>
     </issueManagement>
     
     <ciManagement>
@@ -167,7 +167,28 @@
             <version>4.0</version>
             <scope>runtime</scope>
         </dependency>-->
+        </dependencies>
+        <build>
+            <pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>Sirius.server.middleware.impls.domainserver.DomainServerImpl</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </plugin>     
+                </plugins>
+            </pluginManagement>         
+        <!--
         
-
-    </dependencies>
+            CAUTION ! Ugly Winning bei der Namens-Auswahl !!! siehe Slack =>
+            https://cismet.slack.com/files/jruiz/F3ZC7HX7V/Snapshot_als_finalName_in_pom_xml
+        -->
+        <finalName>verdis-server-2.0-SNAPSHOT</finalName>
+    </build>
 </project>
