finalName added to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -75,4 +75,8 @@
         </dependency>
 
     </dependencies>
+    
+    <build>
+        <finalName>verdis-server-2.0-SNAPSHOT</finalName>
+    </build>
 </project>
