--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
             <artifactId>cids-server</artifactId>
         </dependency>
         <dependency>
+            <groupId>de.cismet.cids</groupId>
+            <artifactId>cids-server-rest-types</artifactId>
+        </dependency>
+        <dependency>
             <groupId>de.cismet.verdis</groupId>
             <artifactId>verdis-commons</artifactId>
             <!--
@@ -167,7 +171,7 @@
             <version>4.0</version>
             <scope>runtime</scope>
         </dependency>-->
-        </dependencies>
+    </dependencies>
         <build>
             <pluginManagement>
                 <plugins>
