--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
             <dependency>
                 <groupId>de.cismet.commons</groupId>
                 <artifactId>cismet-commons</artifactId>
-                <version>6.2.1</version>
+                <version>6.4</version>
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>
@@ -60,7 +60,7 @@
             <dependency>
                 <groupId>de.cismet.cids</groupId>
                 <artifactId>cids-server</artifactId>
-                <version>6.3.1</version>
+                <version>6.3.3</version>
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>
@@ -76,7 +76,7 @@
             <dependency>
                 <groupId>de.cismet.verdis</groupId>
                 <artifactId>verdis-commons</artifactId>
-                <version>6.0</version>
+                <version>6.0.2</version>
                 <!--
                      verdis-server imports only final CONSTANTS from verdis-commons:
                     -> static final fields will be inlined by the bytecode compiler 
@@ -91,8 +91,9 @@
             <dependency>
                 <groupId>de.cismet.cids.custom.wupp.server</groupId>
                 <artifactId>cids-custom-server-wuppertal</artifactId>
-                <version>6.3</version>
-                <scope>runtime</scope>
+                <version>6.10</version>
+                <scope>compile</scope>
+                <type>jar</type>
             </dependency>
             <!-- END: managed cids-dependencies -->    
         </dependencies>
@@ -112,6 +113,10 @@
             <groupId>de.cismet.cids</groupId>
             <artifactId>cids-server-rest-types</artifactId>
         </dependency>
+        <dependency>
+            <groupId>de.cismet.cids.custom.wupp.server</groupId>
+            <artifactId>cids-custom-server-wuppertal</artifactId>
+        </dependency>        
         <dependency>
             <groupId>de.cismet.verdis</groupId>
             <artifactId>verdis-commons</artifactId>
