--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>        
+        
         <!-- END: Provided dependencies -->
        
         
