#64 upgrade versions of jetty to 9.4.50.v20221201, swagger to 1.6.9 and jackson to 2.10.5

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>7.0</version>
+        <version>8.0-prerelease-1</version>
     </parent>
 
     <groupId>de.cismet.verdis</groupId>
@@ -43,7 +43,7 @@
             <dependency>
                 <groupId>de.cismet</groupId>
                 <artifactId>cismet-ext-bom</artifactId>
-                <version>7.2.3</version>
+                <version>8.0-prerelease-1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -52,7 +52,7 @@
             <dependency>
                 <groupId>de.cismet.commons</groupId>
                 <artifactId>cismet-commons</artifactId>
-                <version>7.4.1</version>
+                <version>8.0-prerelease-1</version>
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>
@@ -60,7 +60,7 @@
             <dependency>
                 <groupId>de.cismet.cids</groupId>
                 <artifactId>cids-server</artifactId>
-                <version>7.11.3</version>
+                <version>8.0-prerelease-1</version>
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>
@@ -68,7 +68,7 @@
             <dependency>
                 <groupId>de.cismet.cids</groupId>
                 <artifactId>cids-server-rest-types</artifactId>
-                <version>7.0.2</version>
+                <version>8.0-prerelease-1</version>
                 <scope>compile</scope>
                 <type>jar</type>
             </dependency>
@@ -76,7 +76,7 @@
             <dependency>
                 <groupId>de.cismet.cids.custom.wupp.server</groupId>
                 <artifactId>cids-custom-server-wuppertal</artifactId>
-                <version>7.7.7</version>
+                <version>8.0-prerelease-1</version>
                 <scope>compile</scope>
                 <type>jar</type>
             </dependency>
