--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
             <dependency>
                 <groupId>de.cismet.cids</groupId>
                 <artifactId>cids-server</artifactId>
-                <version>8.0</version>
+                <version>8.2.3-class_id_2_class_key-prerelease-2</version>
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>
